HW20-210 - HWC20 Development of the complete HWC20 Photo Gallery

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7078,3 +7078,18 @@ body.page-tools-and-publications-publications{
 			}
 	}
 }
+
+
+/* Photo Gallery */
+.view-flickr-albums{
+	clear: both;
+	.views-row{
+		.date-display-single{
+			color: #FFF;
+		}
+		img{
+			border: 0;
+			border-radius: 0;
+		}
+	}
+}
