--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -6135,6 +6135,17 @@ body.page-tools-and-publications-publications ol.multicarousel-indicators li {
 body.page-tools-and-publications-publications ol.multicarousel-indicators li.active {
   background: #ACC700;
 }
+/* Photo Gallery */
+.view-flickr-albums {
+  clear: both;
+}
+.view-flickr-albums .views-row .date-display-single {
+  color: #FFF;
+}
+.view-flickr-albums .views-row img {
+  border: 0;
+  border-radius: 0;
+}
 @media (min-width: 1200px) {
   /*Slider Publications*/
   body.page-tools-and-publications-publications .slider--video--section {
