--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7084,12 +7084,21 @@ body.page-tools-and-publications-publications{
 .view-flickr-albums{
 	clear: both;
 	.views-row{
+		padding: 0;
 		.date-display-single{
 			color: #FFF;
 		}
 		img{
 			border: 0;
 			border-radius: 0;
+		}
+	}
+
+	.view-content{
+		.gallery-row {
+			.views-field-field-flickr{
+				height: 240px;	
+			}
 		}
 	}
 }
