--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -129,6 +129,10 @@ select {
 .main-container.container {
   padding-bottom: 2em;
 }
+.alert a {
+  font-weight: normal;
+  color: #003399;
+}
 .date-display-single {
   color: #57575a;
   float: left;
@@ -210,11 +214,6 @@ select {
 .back-links span {
   margin-left: 0.5em;
   font-weight: bold;
-}
-.alert.alert-block.alert-danger,
-.alert.alert-block.alert-success {
-  float: left;
-  width: 70%;
 }
 .main-container h2 {
   color: #003399;
@@ -1080,6 +1079,10 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   padding-right: 0.7em;
   padding-left: 5px;
 }
+.newsletter-social-media .newsletter h3 span a {
+  color: #FFF;
+  font-size: 3.3rem;
+}
 .newsletter-social-media .social-media {
   padding-left: 2em;
 }
@@ -1088,6 +1091,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   margin-top: 0;
   margin-bottom: 1em;
   font-weight: 400;
+  font-size: 3.3rem;
 }
 .newsletter-social-media .social-media h3 span {
   padding-right: 0.7em;
@@ -1102,17 +1106,17 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   content: ' ';
   width: 35px;
   display: block;
-  height: 25px;
+  height: 35px;
   float: left;
-  background: url(../images/ico-newsletter.png) no-repeat;
+  background: url(../images/ico-newsletter.png) no-repeat 1px 6px;
 }
 .newsletter-social-media .social-media h3:before {
   content: ' ';
   width: 30px;
   display: block;
-  height: 28px;
+  height: 35px;
   float: left;
-  background: url(../images/ico-social-media.png) no-repeat;
+  background: url(../images/ico-social-media.png) no-repeat 1px 6px;
 }
 .social-media-links {
   display: flex;
@@ -5103,6 +5107,10 @@ body.european-week #block-views-news-european-week ul > li:nth-child(2) {
 .page-node-160 .watch-other-link {
   text-align: center;
 }
+.page-node-160 .hwc-share-widget ul .share-this-article {
+  color: #FFF;
+  top: -2px;
+}
 /* Styling Wysiwyg  */
 .float-img {
   float: left;
@@ -5110,6 +5118,14 @@ body.european-week #block-views-news-european-week ul > li:nth-child(2) {
 }
 /* Styles for Release 2, This styles shouldn't be merge on release_1 branch */
 /* Private Zone */
+.logged-in.ocp .profile-edit-links-container {
+  border-bottom: 2px solid #bcd75b;
+  padding-bottom: 3em;
+}
+.profile-edit-links-container {
+  border-bottom: 0 solid #bcd75b;
+  padding-bottom: 0;
+}
 .profile-edit-links-container #act-as-partner .modal-body {
   padding: 0;
 }
@@ -5671,6 +5687,9 @@ body.newsletter .hwc-share-widget {
   padding-right: 2em;
 }
 /* Home page */
+body.front-page .youtube-video .hp-modal-content {
+  padding-bottom: 3em;
+}
 body.front-page .main-container {
   /* Intro Boxes */
   /* Recommended tools and resources */
@@ -5715,7 +5734,7 @@ body.front-page .main-container #block-views-homepage-banners-block .view-homepa
 body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-odd .img-right-column {
   height: 100%;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-even .img-right-column img,
 body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-odd .img-right-column img {
@@ -5935,6 +5954,11 @@ body.front-page .main-container .newsletter-social-media {
   padding-bottom: 2em;
   padding-top: 2em;
 }
+body.front-page .main-container .newsletter-social-media p {
+  text-align: left;
+  width: 81%;
+  padding-bottom: 10px;
+}
 body.front-page .main-container .newsletter-social-media #block-osha-newsletter-osha-newsletter-image {
   background: transparent;
   padding: 2em 2em 2em 2em;
@@ -5949,6 +5973,11 @@ body.front-page .main-container .newsletter-social-media #block-osha-newsletter-
   display: block;
   text-align: left;
   font-weight: 500;
+}
+body.front-page .main-container .newsletter-social-media #block-osha-newsletter-osha-newsletter-image .see-more-button-20 {
+  clear: both;
+  float: left;
+  margin-top: 2em;
 }
 body.front-page .main-container .newsletter-social-media #newsletter-subscription-frontpage-form-wrapper {
   position: relative;
@@ -5969,11 +5998,21 @@ body.front-page .main-container .newsletter-social-media #newsletter-subscriptio
 body.front-page .main-container .newsletter-social-media #newsletter-subscription-frontpage-form-wrapper .form-submit:before {
   content: none;
 }
+body.front-page .main-container .newsletter-social-media #newsletter-subscription-frontpage-form-wrapper .subscribe_block {
+  position: relative;
+}
 body.front-page .main-container .newsletter-social-media #newsletter-subscription-frontpage-form-wrapper #security_code {
   width: auto;
 }
 body.front-page .main-container .newsletter-social-media #newsletter-subscription-frontpage-form-wrapper .form-type-checkbox {
   text-align: left;
+}
+body.front-page .main-container .newsletter-social-media #newsletter-subscription-frontpage-form-wrapper .form-type-checkbox a {
+  color: #FFF;
+  text-decoration: underline;
+}
+body.front-page .main-container .newsletter-social-media #newsletter-subscription-frontpage-form-wrapper .form-type-checkbox a:hover {
+  text-decoration: none;
 }
 body.front-page .main-container .newsletter-social-media #newsletter-subscription-frontpage-form-wrapper #captcha_0 {
   margin-left: 0;
@@ -6075,6 +6114,7 @@ body.front-page .main-container #block-hwc-homepage-hwc-homepage-topics .priorit
   margin-right: 2em;
   margin-bottom: 1em;
   width: 257px;
+  min-height: 100px;
   margin-top: 0.5em;
   border: 2px solid #bcd75b;
   border-radius: 12px;
