--- a/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/rewrite.css
@@ -94,6 +94,13 @@ header.navbar-default .navbar-collapse nav ul.menu > li.first a:before{
     color: #FFF;
 }
 
+/* Private zone */
+.logged-in .main-container .pane-content h1{
+    color: #003399;
+    font-size: 4rem;    
+    font-weight: 400;
+}
+
 .dropdown-menu{
     background-clip: inherit;
 }
