--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -151,6 +151,12 @@ select{
 	padding-bottom: 2em;
 }
 
+.alert a{
+	font-weight: normal;
+	color: #003399;
+}
+
+
 .date-display-single{
 	color: #57575a;
 	float: left;
@@ -247,12 +253,6 @@ select{
 	    margin-left: 0.5em;
 	    font-weight: bold;
 	}
-}
-
-
-.alert.alert-block.alert-danger, .alert.alert-block.alert-success{
-	float: left;
-    width: 70%;
 }
 
 .main-container{
@@ -1219,6 +1219,10 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 	    	span{
 				padding-right: 0.7em;
 				padding-left: 5px;
+				a{
+					color: #FFF;
+					font-size: 3.3rem;
+				}
 			}
     	}
 	}
@@ -1229,6 +1233,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 			margin-top: 0;
 			margin-bottom: 1em;
 			font-weight: 400;
+			font-size: 3.3rem;
 	      	span{
 				padding-right: 0.7em;
 				padding-left: 5px;
@@ -1246,11 +1251,11 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 	.newsletter{
 		h3:before{
 			content: ' ';
-			width: 35px;
-			display: block;
-			height: 25px;
-			float: left;
-			background: url(../images/ico-newsletter.png) no-repeat;
+		    width: 35px;
+		    display: block;
+		    height: 35px;
+		    float: left;
+		    background: url(../images/ico-newsletter.png) no-repeat 1px 6px;
 		}
 	}
 	.social-media{
@@ -1258,9 +1263,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 			content: ' ';
 			width: 30px;
 			display: block;
-			height: 28px;
+			height: 35px;
 			float: left;
-			background: url(../images/ico-social-media.png) no-repeat;
+			background: url(../images/ico-social-media.png) no-repeat 1px 6px;;
 		}
 	}
 }
@@ -5848,6 +5853,11 @@ body.european-week{
 	.watch-other-link{
 		text-align: center;
 	}
+
+	.hwc-share-widget ul .share-this-article{
+		color: #FFF;
+		top: -2px;
+	}
 }
 
 
@@ -5863,8 +5873,14 @@ body.european-week{
 /* Styles for Release 2, This styles shouldn't be merge on release_1 branch */
 
 /* Private Zone */
-.profile-edit-links-container{
+.logged-in.ocp .profile-edit-links-container{
+	border-bottom: 2px solid #bcd75b;
+	padding-bottom: 3em;
+}
 
+.profile-edit-links-container{
+	border-bottom: 0 solid #bcd75b;
+	padding-bottom: 0;
 	#act-as-partner{
 		.modal-body{
 			padding: 0;
@@ -6526,6 +6542,13 @@ body.newsletter{
 /* Home page */
 
 body.front-page{
+
+	.youtube-video{
+		.hp-modal-content{
+			padding-bottom: 3em;
+		}
+	}
+
 	.main-container{
 		/* Intro Boxes */
 		#block-views-homepage-banners-block{
@@ -6575,7 +6598,7 @@ body.front-page{
 					.img-right-column{
 						height: 100%;
     					display: flex;
-    					align-items: flex-end;
+    					align-items: center;
     					img{
 		    				margin: 0 auto;
 		    			}
@@ -6834,6 +6857,12 @@ body.front-page{
 			width: 100%;
 			padding-bottom: 2em;
     		padding-top: 2em;
+    		p{
+    			text-align: left;
+    			width: 81%;
+    			padding-bottom: 10px;
+    		}
+
 			#block-osha-newsletter-osha-newsletter-image{
 				background: transparent;
 				padding: 2em 2em 2em 2em;
@@ -6849,6 +6878,12 @@ body.front-page{
 						text-align: left;
 						font-weight: 500;
 					}
+				}
+
+				.see-more-button-20{
+					clear: both;
+					float: left;
+					margin-top: 2em;
 				}
 			}
 			#newsletter-subscription-frontpage-form-wrapper{
@@ -6870,12 +6905,23 @@ body.front-page{
 					}
 				}
 
+				.subscribe_block{
+					position: relative;
+				}
+
 				#security_code{
 					width: auto;
 				}
 
 				.form-type-checkbox{
 					text-align: left;
+					a{
+						color: #FFF;
+						text-decoration: underline;
+						&:hover{
+							text-decoration: none;
+						}
+					}
 				}
 
 				#captcha_0{
@@ -7005,6 +7051,7 @@ body.front-page{
 					    margin-right: 2em;
 					    margin-bottom: 1em;
 					    width: 257px;
+					    min-height: 100px;
 	    				margin-top: 0.5em;
 	    				border: 2px solid #bcd75b;
 	    				border-radius: 12px;
