--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4724,6 +4724,9 @@ body{
     					padding: 0;
     					li.search-choice{
     						margin: -1px 5px 0 0;
+							box-shadow: 0 0 0 white inset, 0 0 0 rgba(0, 0, 0, 0.05);
+							background: transparent;
+							border: 0;
     						input{
     							height:20px !important;
     						}
