--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5984,7 +5984,6 @@ body.front-page .main-container .newsletter-social-media {
   min-height: auto;
   float: left;
   width: 100%;
-  padding-bottom: 2em;
   padding-top: 2em;
 }
 body.front-page .main-container .newsletter-social-media p {
@@ -5997,7 +5996,9 @@ body.front-page .main-container .newsletter-social-media #block-osha-newsletter-
   padding: 2em 2em 2em 2em;
   max-width: 800px;
   margin: 0 auto;
+  width: 100%;
   height: 100%;
+  float: right;
 }
 body.front-page .main-container .newsletter-social-media #block-osha-newsletter-osha-newsletter-image h2.block-title a {
   background: url(../images/ico-newsletter.png) no-repeat 1px 5px;
@@ -6056,6 +6057,7 @@ body.front-page .main-container .newsletter-social-media #newsletter-subscriptio
 }
 body.front-page .main-container .box-before:nth-child(1) .newsletter {
   float: right;
+  width: 100%;
 }
 body.front-page .main-container .box-before:nth-child(2) {
   background: url(../images/border-dashed-newsletter.png) repeat-y;
