--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6890,7 +6890,6 @@ body.front-page{
 			min-height: auto;
 			float: left;
 			width: 100%;
-			padding-bottom: 2em;
     		padding-top: 2em;
     		p{
     			text-align: left;
@@ -6903,7 +6902,10 @@ body.front-page{
 				padding: 2em 2em 2em 2em;
 				max-width: 800px;
 				margin: 0 auto;
+				width: 100%;
 				height: 100%;
+				float: right;
+
 				h2.block-title{
 					a{
 						background: url(../images/ico-newsletter.png) no-repeat 1px 5px;
@@ -6973,6 +6975,7 @@ body.front-page{
 		.box-before:nth-child(1){
 			.newsletter{
 				float: right;
+				width: 100%;
 			}
 		}
 
