--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5149,6 +5149,9 @@ body.european-week #block-views-news-european-week ul > li:nth-child(2) {
 }
 /* Styles for Release 2, This styles shouldn't be merge on release_1 branch */
 /* Private Zone */
+.pane-hwc-partner-hwc-partner-profile-title {
+  width: 100%;
+}
 .logged-in.ocp .profile-edit-links-container {
   border-bottom: 2px solid #bcd75b;
   padding-bottom: 3em;
