--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5912,6 +5912,11 @@ body.european-week{
 /* Styles for Release 2, This styles shouldn't be merge on release_1 branch */
 
 /* Private Zone */
+
+.pane-hwc-partner-hwc-partner-profile-title{
+	width: 100%;
+}
+
 .logged-in.ocp .profile-edit-links-container{
 	border-bottom: 2px solid #bcd75b;
 	padding-bottom: 3em;
