--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -485,6 +485,12 @@
 			width: 25%;
 			margin-right: 0em;
 		}
+
+		#block-hwc-page-share-widget{
+			.hwc-share-widget{
+				display: none;
+			}
+		}
 	}	
 
 	/* Previous Campaigns */
