--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -236,3 +236,18 @@
 	}
 
 }
+
+@media (min-width: 1230px) and (max-width: 1530px){
+
+	.profile-edit-links-container{
+		.pane-hwc-partner-hwc-partner-private-link-0,
+		.pane-hwc-partner-hwc-partner-private-link-1,
+		.pane-hwc-partner-hwc-partner-private-link-2,
+		.pane-hwc-partner-hwc-partner-private-link-3,
+		.pane-node-profile-update-link{
+		 	width: 376px;
+		 	margin-bottom: 2em;
+		}
+	}
+
+}
