--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4357,6 +4357,7 @@ body.een{
 
 	.panels-flexible-row-partner_detail-13{
 		float: right;
+		width: 100%;
 	}
 }
 
@@ -4376,6 +4377,9 @@ body{
 					font-weight: 600;
 				}
 			}
+		}
+		.box-type-partner{
+			width: 100%;
 		}
 	}
 }
